--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_SUPABASE_URL=https://xxxx.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzxxx
+NEXT_PUBLIC_SUPABASE_URL=https://xdvz.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=ojeidsocfsxgqronvtsz
